added cards for control-container.component

--- a/src/app/components/control-container/card-1/card-1.component.html
+++ b/src/app/components/control-container/card-1/card-1.component.html
@@ -1,4 +1,4 @@
-<mat-card appearance="outlined">
+<mat-card appearance="outlined" class="flex-grow-1">
   <mat-card-content>
     <p>card-1 works!</p>
     <app-base-input-control [control]="inputControl" [label]="'Card1 Input Label'" />
