--- a/src/app/components/form-wrapper/form-wrapper.component.html
+++ b/src/app/components/form-wrapper/form-wrapper.component.html
@@ -1,1 +1,5 @@
-<p>form-wrapper works!</p>
+<div class="row">
+  <p class="col-12">form-wrapper works!</p>
+  <app-card-1 class="col-6 mb-2 d-flex flex-column" [form]="card1FormGroup" />
+  <app-card-2 class="col-6 mb-2 d-flex flex-column" [form]="card2FormGroup" />
+</div>
