--- a/src/app/components/control-container/card-1/card-1.component.html
+++ b/src/app/components/control-container/card-1/card-1.component.html
@@ -4,7 +4,7 @@
     <app-base-input-control [control]="inputControl" [label]="'Card1 Input Label'" />
     <app-base-select-control [control]="selectControl" [label]="'Card1 Select Label'" [options]="selectOptions" />
     <app-base-textarea-control  [control]="textareaControl1" [label]="'Card1 Textarea 1 Label'" />
-    <app-base-checkbox-control [control]="checkboxControl" [label]="'Card2 Checkbox Label 2'" class="d-block" />
+    <app-base-checkbox-control [control]="checkboxControl" [label]="'Card1 Checkbox Label 2'" class="d-block mb-2" />
     <app-base-textarea-control  [control]="textareaControl2" [label]="'Card1 Textarea 2 Label'" />
   </mat-card-content>
 </mat-card>
